--- a/src/components/ControlPanel.css
+++ b/src/components/ControlPanel.css
@@ -16,7 +16,7 @@
   font-weight: bold;
   width: 100%;
   height: 100%;
-  /* padding: var(--spacing-xl); */
+  margin: var(--spacing-medium);
 }
 
 .new-game-button {
@@ -60,7 +60,7 @@
   }
   .new-game-button {
     font-size: var(--font-medium);
-  padding: var(--spacing-small) var(--spacing-small);
+    padding: var(--spacing-small) var(--spacing-small);
   }
 
   .ai-config-button {
